# project-warp

./: CURRENT_STATUS.md  ENHANCEMENT-PLAN.md  PROJECT-STATUS.md  TAURI_2.md  bun.lockb  package.json
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
src/: App.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  search.rs  terminal.rs  window_management.rs
src-tauri/templates/web-app/: README.md  index.html  package.json  tsconfig.json  vite.config.js
src-tauri/templates/web-app/src/: App.svelte  main.ts
src-tauri/templates/web-app/src/components/: Navbar.svelte
src-tauri/templates/web-app/src/routes/: About.svelte  Home.svelte
src/components/: Editor.svelte  Monaco.svelte  SearchBar.svelte  SearchPanel.svelte  SettingsPanel.svelte  Terminal.svelte
src/components/canvas/: CanvasToolbar.svelte  ComponentPalette.svelte  PropertyPanel.svelte  ResizeHandle.svelte  UICanvas.svelte  UIPallete.svelte  types.ts
src/components/canvas/stores/: canvasStore.ts
src/components/fileExplorer/: ContextMenu.svelte  Explorer.svelte  File.svelte  Folder.svelte  index.ts  types.ts
src/components/tabs/: OnlyTabs.svelte
src/modules/warp/codeMap/: index.ts  parser.ts  sync.ts  types.ts
src/modules/warp/core/: composition.ts  eventBus.ts  index.ts  (+3 more)
src/stores/: activeFile.ts  directoryStore.ts  layoutStore.ts  panelStore.ts  searchStore.ts  settingsStore.ts
src/styles/: app.css
src/types/: launcher.ts
src/views/: AppBuilder.svelte  Launcher.svelte
(+7 files in other folders)
